# Divaparadise-ai

./: .gitignore
app/: HOW_TO_ADD_MUSIC.md  WebDesignTools_README.md  index.html  package-lock.json  package.json  tailwind.config.js
app/AI-System/: .env.example  README.md  api_server.py  google_studio_manager.py  list_models.py  requirements.txt  requirements_minimal.txt  setup_api_server.py  verify_gemini.py  verify_ollama.py
app/AI-System/01_Image_Generation/: README.md
app/AI-System/02_Video_Generation/: README.md
app/AI-System/03_Audio_Generation/: README.md
app/AI-System/04_Lip_Sync_Generation/: README.md
app/AI-System/99_Multimodal_Lab/: lab_bench.py
app/AI-System/Batch/lab/: batch_lab.py
app/AI-System/Google_Drive_Integration/: README.md  demo_auto_backup.py  quick_test.py  run_test.bat  setup.bat  setup_divaparadises_backup.py  setup_drive.py  test_connection.py  test_report_20260204_011704.json
app/AI-System/The Models/: .gitignore  README.md  audit_models.py  model_manifest.json
app/AI-System/utils/: storage_manager.py
app/src/: App.css  App.tsx  declarations.d.ts  index.css
app/src/config/: skills.ts
app/src/hooks/: useAudioEngine.ts
app/src/i18n/: config.ts
app/src/lib/: musicData.ts
app/src/sections/: ArtistSpotlight.tsx  CommunityPlaylists.tsx  FeaturedArtists.tsx  GenreExplorer.tsx  HeroSection.tsx  Navigation.tsx  NewReleases.tsx  Newsletter.tsx  TrendingSongs.tsx
app/src/services/: aiService.ts
app/src/store/: chatStore.ts  playerStore.ts
app/src/types/: music.ts
core-engine/: Cargo.toml
core-engine/src/: lib.rs
(+120 files in other folders)
