[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance Audio DSP Engine for Divaparadises"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }

[profile.release]
# Optimize for size and speed
opt-level = "s"
lto = true
